stderr.log
Traceback (most recent call last):
  File "/home/myitland/public_html/hosi/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'public_html/hosi/app.py')
  File "/opt/alt/python39/lib64/python3.9/imp.py", line 171, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 711, in _load
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 846, in exec_module
  File "<frozen importlib._bootstrap_external>", line 983, in get_code
  File "<frozen importlib._bootstrap_external>", line 913, in source_to_code
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "public_html/hosi/app.py", line 8
    def public_html/hosi/app.py(environ, start_response):
                   ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/myitland/public_html/hosi/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'public_html/hosi/app.py')
  File "/opt/alt/python39/lib64/python3.9/imp.py", line 171, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 711, in _load
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 846, in exec_module
  File "<frozen importlib._bootstrap_external>", line 983, in get_code
  File "<frozen importlib._bootstrap_external>", line 913, in source_to_code
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "public_html/hosi/app.py", line 8
    def public_html/hosi/app.py(environ, start_response):
                   ^
SyntaxError: invalid syntax
[UID:1022][665227] Child process with pid: 665230 was killed by signal: 15, core dumped: no
Traceback (most recent call last):
  File "/home/myitland/public_html/hosi/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'public_html/hosi/app.py')
  File "/opt/alt/python39/lib64/python3.9/imp.py", line 171, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 711, in _load
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 846, in exec_module
  File "<frozen importlib._bootstrap_external>", line 983, in get_code
  File "<frozen importlib._bootstrap_external>", line 913, in source_to_code
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "public_html/hosi/app.py", line 8
    def public_html/hosi/app.py(environ, start_response):
                   ^
SyntaxError: invalid syntax
[UID:1022][665227] Child process with pid: 665454 was killed by signal: 15, core dumped: no
Traceback (most recent call last):
  File "/home/myitland/public_html/hosi/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'public_html/hosi/app.py')
  File "/opt/alt/python39/lib64/python3.9/imp.py", line 171, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 711, in _load
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 846, in exec_module
  File "<frozen importlib._bootstrap_external>", line 983, in get_code
  File "<frozen importlib._bootstrap_external>", line 913, in source_to_code
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "public_html/hosi/app.py", line 8
    def public_html/hosi/app.py(environ, start_response):
                   ^
SyntaxError: invalid syntax
[UID:1022][665227] Child process with pid: 665572 was killed by signal: 15, core dumped: no
